# mmck-infix

./: .dir-locals.el  .travis.yml  Makefile.am  NEWS  README  README.md  configure.ac
doc/: mmck-infix.texi
lib/: config.scm.in  mmck.infix.core.scm  mmck.infix.funcs.scm  mmck.infix.helpers.scm  mmck.infix.scm  mmck.infix.version.scm
tests/: test-core.scm  test-funcs.scm  test-version.scm
